# fillmyblank-ai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEPLOYMENT.md  Dockerfile  LICENSE  PROJECT_REPORT.md  README.md  RELEASE_NOTES.md  REPORT.md  Report.md  app.py  packages.txt  pyproject.toml  railway.toml  requirements.txt
.gitlab/issue_templates/: Bug.md  Documentation.md  Feature_Request.md
.gitlab/merge_request_templates/: Bug_Fix.md  Default.md
assets/: prompts.json
data/: app.py  requirements.txt
frontend/components/: footer.py  navbar.py  sidebar.py
frontend/pages/: home.py  leaderboard.py  play.py
frontend/styling/: style.css
games/: fill_in_blank.py  match_the_following.py  story_completion.py
utils/: auth.py  dynamic_questions.py  feedback.py  leaderboard.py  llm_score.py  localization.py  storage.py  voice_to_text.py
