[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fillmyblank-ai"
version = "1.0.0"
description = "A multilingual language learning app with interactive games and AI-powered features"
readme = "README.md"
license = { text = "AGPL-3.0-only" }
authors = [
    {name = "Rishi", email = "rishi@fillmyblank.ai"},
    {name = "Arshia", email = "arshia@fillmyblank.ai"},
    {name = "Sherlyn", email = "sherlyn@fillmyblank.ai"},
    {name = "Mahesh", email = "mahesh@fillmyblank.ai"},
    {name = "Bhushan", email = "bhushan@fillmyblank.ai"}
]
keywords = ["language-learning", "streamlit", "ai", "multilingual", "education"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Education",
    "Topic :: Games/Entertainment :: Puzzle Games",
]
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.31.0",
    "streamlit-js-eval",
    "speechrecognition",
    "pydub",
    "soundfile",
    "transformers",
    "sentence-transformers",
    "indic-transliteration",
    "pandas",
    "bcrypt",
    "requests",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "pytest",
    "pytest-cov",
]

[tool.setuptools]
packages = ["games", "utils"]

[project.urls]
Homepage = "https://github.com/yourusername/fillmyblank-ai"
Repository = "https://github.com/yourusername/fillmyblank-ai"
Issues = "https://github.com/yourusername/fillmyblank-ai/issues"

[tool.ruff]
line-length = 88
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
